Bug 33617 - lines created in report builder are not shown in report
Summary: lines created in report builder are not shown in report
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium critical
Assignee: Lionel Elie Mamane
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
: 35463 36411 37224 40230 46526 47497 49757 52471 64832 (view as bug list)
Depends on:
Blocks: Database-Reports-Builder-MAB
  Show dependency treegraph
 
Reported: 2011-01-27 12:36 UTC by jos
Modified: 2013-11-21 16:21 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test ODB containg reports with separator lines (50.77 KB, application/vnd.oasis.opendocument.database)
2011-03-03 06:50 UTC, Alex Thurgood
Details
screenshot of opened report in OOo 3.3.0 (76.34 KB, image/png)
2011-03-03 06:54 UTC, Alex Thurgood
Details
Report printed with libreoffice 3.3 (104.92 KB, image/jpeg)
2011-03-04 05:24 UTC, jos
Details
Report printed with openoffice 3.3 (90.13 KB, image/jpeg)
2011-03-04 05:25 UTC, jos
Details
Trace on MacOSX (94.16 KB, text/plain)
2011-03-14 09:33 UTC, Alex Thurgood
Details
Horizontal lines were shown in LO 3.3.0 Beta 1 (47.15 KB, image/png)
2013-07-23 16:45 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jos 2011-01-27 12:36:44 UTC
I have a quit complicated report end I use some horizontal and vertical lines to make the report look more ordered. In openoffice.org 3.2 it looks good. In Libre Office 3.3 the lines are not shown in the resulting report.
To test I created a complete new database with an report with lines. The lines still are not visible.
Comment 1 Alex Thurgood 2011-02-04 09:20:22 UTC
Hi Jos,

This buggy behaviour has been confirmed by a user on the French user lists too. I can confirm that on the Mac, the reports look good in OOo 3.2.1, NeoOffice, and even OOo 3.3. Unfortunately, it appears that when I try to open such reports with LibO, they cause it to hang, so I've opened another bug report for that specific behaviour.


Alex
Comment 2 Alex Thurgood 2011-02-04 09:24:53 UTC
changing platform to all
Comment 3 Alex Thurgood 2011-02-16 23:21:52 UTC
The problem is still present in 3.3.1 RC1.

Alex
Comment 4 Alex Thurgood 2011-02-16 23:26:00 UTC
This is a regression compared to OOo 3.2.1 and even 3.3.0 which display the lines in the report correctly.
Comment 5 Alex Thurgood 2011-03-03 06:50:51 UTC
Created attachment 44076 [details]
Test ODB containg reports with separator lines

Adding test.odb
Comment 6 Alex Thurgood 2011-03-03 06:54:26 UTC
Created attachment 44077 [details]
screenshot of opened report in OOo 3.3.0

Adding screenshot showning how the report should appear. Made with OOo 3.3.0 which displays the report lines correctly.
Comment 7 Alex Thurgood 2011-03-03 07:02:16 UTC
I can't currently provide a comparative screenshot of how the report looks with LibO (because it causes my Mac to hang before displaying the data), so someone else will have to do it. 


Alex
Comment 8 jos 2011-03-04 05:24:07 UTC
Created attachment 44116 [details]
Report printed with libreoffice 3.3

Added print from Libreoffice
Comment 9 jos 2011-03-04 05:25:32 UTC
Created attachment 44117 [details]
Report printed with openoffice 3.3

Added report printed with openoffice 3.3
Comment 10 Alex Thurgood 2011-03-14 09:33:56 UTC
Created attachment 44444 [details]
Trace on MacOSX

Enclosing a trace when attempting to open the report entitled Query1 from test.odb.

Alex
Comment 11 Alex Thurgood 2011-05-12 10:15:27 UTC
*** Bug 35463 has been marked as a duplicate of this bug. ***
Comment 12 Alex Thurgood 2011-05-12 10:28:06 UTC
This bug is still present in 3.3.2, 3.4beta5, and my LibO-dev built yesterday from master. 


It works in OOo-dev 3.4.

Bad karma.


Alex
Comment 13 Alex Thurgood 2011-05-15 08:09:17 UTC
*** Bug 37224 has been marked as a duplicate of this bug. ***
Comment 14 Alex Thurgood 2011-05-17 09:40:10 UTC
*** Bug 36411 has been marked as a duplicate of this bug. ***
Comment 15 ribotb 2011-06-05 03:40:59 UTC
I confirm. Bug still exists in LibO332 (under Windows XP SP3) and LibO340rc2 (under Windows 7 SP1).

Bernard Ribot
Comment 16 Björn Michaelsen 2011-12-23 13:23:31 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 17 Robert Großkopf 2011-12-24 00:42:43 UTC
Bug still exists in LO 3.5.0 beta2 linux-x86-rpm
Comment 18 Julien Nabet 2012-02-23 13:27:17 UTC
*** Bug 46526 has been marked as a duplicate of this bug. ***
Comment 19 Julien Nabet 2012-02-23 14:31:21 UTC
Have no hint about this but found a workaround here :
http://user.services.openoffice.org/en/forum/viewtopic.php?f=42&t=46540
Comment 20 ribotb 2012-02-24 00:24:21 UTC
Bug still exists in LO 3.5.0 under Windows 7 SP1

Bernard
Comment 21 Lionel Elie Mamane 2012-03-21 08:11:15 UTC
I've analyzed the difference in the generated odt files:

One has

        <style:style style:name="Group_5f_Header.A2" style:display-name="Group_Header.A2" style:family="table-cell">
            <style:table-cell-properties style:vertical-align="top" fo:padding="0cm" fo:border-left="none" fo:border-right="none" fo:border-top="0.002cm solid #000000" fo:border-bottom="none"/>
        </style:style>
 

The other hs:


        <style:style style:name="Group_5f_Header.A2" style:display-name="Group_Header.A2" style:family="table-cell">
            <style:table-cell-properties style:vertical-align="top"/>
        </style:style>


The table border that implements the line is plainly gone. I haven't been able to find what code generates this style, and looking at diffs of parts of the source tree betzeen OO.org 3.3 and LibO 3.3 is not inspiring either. If somebody has a pointer, I'll gladly take it...
Comment 22 Robert Großkopf 2012-06-26 07:08:12 UTC
*** Bug 47497 has been marked as a duplicate of this bug. ***
Comment 23 Robert Großkopf 2012-06-26 07:10:25 UTC
*** Bug 49757 has been marked as a duplicate of this bug. ***
Comment 24 ribotb 2012-07-27 09:14:02 UTC
Bug still exists in LO 3.5.5.3 under Windows 7 SP1

Bernard Ribot
Comment 25 Robert Großkopf 2012-07-27 09:52:57 UTC
*** Bug 40150 has been marked as a duplicate of this bug. ***
Comment 26 Lionel Elie Mamane 2012-08-24 06:07:32 UTC
Not only the generated odt is different, but also the saved report within the odb; looking at its content.xml (in the .odb: Reports/Obj11/content.xml), a non-affected version has:

        <style:style style:name="ce4" style:family="table-cell">
            <style:table-cell-properties style:vertical-align="top" fo:border-left="none" fo:border-right="none" fo:border-top="none" fo:border-bottom="0.002cm solid #000000"/>
        </style:style>


While an affected version has

        <style:style style:name="ce4" style:family="table-cell">
            <style:table-cell-properties style:vertical-align="top"/>
        </style:style>

Again, the border is completely missing.
Comment 27 Alex Thurgood 2012-08-30 12:25:18 UTC
*** Bug 52471 has been marked as a duplicate of this bug. ***
Comment 28 marco braida 2012-12-27 15:46:40 UTC
Hi this is my very first bug report here i don't know if is the right place to
 confirm this bug is still present into the LibreOffice 4.0 beta 2 

Thanks
Comment 29 Lionel Elie Mamane 2012-12-27 16:15:32 UTC
(In reply to comment #28)

> Hi this is my very first bug report here I don't know if is the right place
> to confirm this bug is still present into the LibreOffice 4.0 beta 2

Yes, thank you. Posting a comment is the right way to confirm it. The "Version" field of the bug should contain the *oldest* version with which the bug has been confirmed.
Comment 30 Robert Großkopf 2013-02-13 19:52:34 UTC
*** Bug 40230 has been marked as a duplicate of this bug. ***
Comment 31 Robert Großkopf 2013-05-22 14:09:16 UTC
*** Bug 64832 has been marked as a duplicate of this bug. ***
Comment 32 royerjy 2013-07-20 10:05:59 UTC
This bug is always present in 4.1.0 rc3 Windows et Ubuntu.
Comment 33 Robert Großkopf 2013-07-23 16:40:56 UTC
I have just tested with LO 3.0.0 beta 1. This is the only available version where the horizontal lines appear. The fields for the vertical lines show in this LO-version a horizontal line with the width of the box created for the vertical line.
When I try LO 3.0.0 beta 2 all lines have been gone.

My test-system: OpenSUSE 12.3 64bit rpm, 
LibreOffice 3.3.0 
OOO330m7 (Build:9526)
libreoffice-build 3.2.99.0
(this is the last working version for horizontal lines described above)

LibreOffice 3.3.0 
OOO330m9 (Build:1)
libreoffice-build 3.2.99.2
(this is the next available version - all lines disappeared)
Comment 34 Robert Großkopf 2013-07-23 16:45:15 UTC
Created attachment 82867 [details]
Horizontal lines were shown in LO 3.3.0 Beta 1
Comment 35 Commit Notification 2013-07-24 21:41:15 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a614a1195d6116f856f9aca0793356c063ed6411

fdo#33617 adapt report engine to incompatible BorderLine2 change



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 36 Lionel Elie Mamane 2013-07-24 22:11:47 UTC
(In reply to comment #35)
> Lionel Elie Mamane committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=a614a1195d6116f856f9aca0793356c063ed6411
> 
> fdo#33617 adapt report engine to incompatible BorderLine2 change

Cédric (Bosdonnat), the "incompatible BorderLine2 change" I'm alluding to is

 commit 7db30f7aa037f52eb07cbb4fd2796bd869204af8
 Author: Cédric Bosdonnat <cedricbosdo@openoffice.org>
 Date:   Wed Oct 6 23:54:04 2010 +0200

where XMLBorderHdl::exportXML is changed to expect a table::BorderLine2, without backwards compatibility with providing a table::BorderLine. ReportBuilder (in the case of a fixed line) was giving a table::BorderLine, which was thus not written out in the XML export.

I'd appreciate if you reviewed the above change to check that the reportbuilder adaptation is done correctly, if anything else needs to be done, etc. And then, if it is OK, review the backports to libreoffice-4-1 and libreoffice-4-0.

Thanks very much in advance!
Comment 37 Commit Notification 2013-07-25 07:19:37 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ead5810d62f66443e03f28474e77519e19880ec0&h=libreoffice-4-1

fdo#33617 adapt report engine to incompatible BorderLine2 change


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 38 Commit Notification 2013-07-25 07:20:04 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7520b77f18d1c20c6fc0dbeecaab2ca8311d27fd&h=libreoffice-4-0

fdo#33617 adapt report engine to incompatible BorderLine2 change


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 39 Robert Großkopf 2013-08-06 06:15:09 UTC
Well done, Lionel!

Horizontal lines will work. I have to change the lines in the report for get the vertical lines working, too. Lines were all shown in LO 4.0.5.1 rc.
Comment 40 suedsauerland 2013-08-06 17:19:01 UTC
Hello Lionel, 
I still have the problem, either horizontal or vertical lines appear. 
I use LO version: 4.1.0.4.

With OpenOffice 4.0.0 I can see all the lines.
The database was created with OpenOffice.

If you want, I can send you the file.
Comment 41 Robert Großkopf 2013-08-06 17:32:18 UTC
(In reply to comment #40)
> Hello Lionel, 
> I still have the problem, either horizontal or vertical lines appear. 
> I use LO version: 4.1.0.4.

Please read the target for the fix: LO 4.1.1 or LO 4.0.5 or LO 4.2.0 - LO 4.1.0.4 appeared before the bug was fixed.