fdo#33617 adapt report engine to incompatible BorderLine2 change

Change-Id: I482e4b7b9f056247de3dae247d9328eb672eeba8